# formula

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md
.github/workflows/: ci.yml  tag_publish.yaml  update_readme.yml
examples/: simple.rs
formula/: Cargo.toml  README.md
formula-wasm/: .gitignore  Cargo.toml  README.dev.md  README.md  index.js  package.json  webpack.config.js
formula-wasm/src/: lib.rs
formula/src/: error.rs  formula.pest  lib.rs
formula/src/parsers/: date_and_time.rs  mod.rs  operator.rs  text.rs  web.rs
src/: error.rs  formula.pest  lib.rs
src/parsers/: basic.rs  basic_types.rs  date_and_time.rs  helper.rs  logical.rs  math.rs  mod.rs  operator.rs  text.rs  web.rs
