[package]
name = "formula-wasm"
description = "A parser and evaluator of spreadsheet-like formulas"
authors = ["Omid Rad <omidmr@gmail.com>"]
version = "0.1.2"
license = "MIT"
keywords = ["excel", "formula", "spreadsheet", "parser"]
categories = ["parser-implementations"]
readme = "README.md"
documentation = "https://docs.rs/formula"
repository = "https://github.com/omid/formula"
edition = "2021"
rust-version = "1.59"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
formula = { version = "0.1" }
