[package]
name = "formula"
description = "A parser and evaluator of spreadsheet-like formulas"
authors = ["Omid Rad <omidmr@gmail.com>"]
version = "0.1.0"
license = "MIT"
keywords = ["excel", "formula", "spreadsheet", "parser"]
categories = ["parser-implementations"]
readme = "README.md"
documentation = "https://docs.rs/formula"
repository = "https://github.com/omid/formula"
edition = "2021"
rust-version = "1.70"

[dependencies]
chrono = "0.4"
pest = "2.7"
pest_derive = "2.7"
rand = "0.8"
thiserror = "1.0"
urlencoding = "2.1"
#sxd-xpath = "0.4"
#sxd-document = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
